--- a/assets/styles/orig/main.css
+++ b/assets/styles/orig/main.css
@@ -1524,6 +1524,7 @@ section {
 }
 
 .others-advantage-card-wrapper > span {
+  z-index: -100;
   position: absolute;
   height: 100%;
   width: 100%;
@@ -1658,6 +1659,7 @@ section {
 .others-advantage-card-wrapper:nth-child(9) .others-advantage-card { animation-delay: 4s; }
 
 .others-advantage-img-ctn {
+  z-index: 1;
   width: 100%;
   max-width: 160px;
   aspect-ratio: 1;
@@ -1758,6 +1760,7 @@ section {
 }
 
 .others-advantage-card > p {
+  z-index: 5;
   display: block;
   height: max-content;
   padding-inline: 32px;
@@ -1775,6 +1778,7 @@ section {
 
 .others-advantage-card > p:hover {
   transform: scale(1.0375);
+  filter: drop-shadow(0 0 4px #fff3);
 }
 
 .others-advantage-img-ctn > span:nth-of-type(1),
@@ -1786,6 +1790,35 @@ section {
 .others-advantage-card-wrapper .others-advantage-card > p {
   border-radius: 0 1000px 1000px 1000px;
   text-shadow: -3px 3px #0004;
+}
+
+.others-advantage-card > p::after {
+  z-index: 100;
+  position: absolute;
+  height: 0;
+  line-height: 0;
+  font-size: 20px;
+  width: 100%;
+  padding-inline: 16px;
+  padding-block: 8px;
+  background: inherit;
+  bottom: 0;
+  left: 0;
+  display: none;
+  font-weight: normal;
+  translate: 0 110%;
+  transform-origin: top;
+  transform: scaleY(0);
+  text-shadow: none;
+  box-shadow: inherit;
+  border-radius: 8px;
+}
+
+.others-advantage-card > p:hover::after {
+  display: block;
+  line-height: normal;
+  height: max-content;
+  transform: scaleY(1);
 }
 
 .others-advantage-card-wrapper:nth-child(5n - 4) .others-advantage-img-ctn > span:nth-of-type(1),
@@ -1856,6 +1889,42 @@ section {
 
 .others-advantage-card-wrapper:nth-child(5n - 0) .others-advantage-img-ctn > img {
   background: var(--clr-5-b);
+}
+
+.others-advantage-card-wrapper:nth-child(1) .others-advantage-card > p::after {
+  content: 'Artificial intelligence has the potential to drastically reduce errors while increasing accuracy and precision.';
+}
+
+.others-advantage-card-wrapper:nth-child(2) .others-advantage-card > p::after {
+  content: 'Another big advantage of AI is that people can avoid many risks by handing dangerous work to AI robots.';
+}
+
+.others-advantage-card-wrapper:nth-child(3) .others-advantage-card > p::after {
+  content: 'AI can work indefinitely with no breaks. They think much faster than humans and can complete numerous jobs at once with high accuracy.';
+}
+
+.others-advantage-card-wrapper:nth-child(4) .others-advantage-card > p::after {
+  content: 'AI can be integrated into chatbots or voice bots to automatically respond to questions or requests.';
+}
+
+.others-advantage-card-wrapper:nth-child(5) .others-advantage-card > p::after {
+  content: 'Use of AI to efficiently automate tedious chores for people, allowing them to focus on being more creative.';
+}
+
+.others-advantage-card-wrapper:nth-child(6) .others-advantage-card > p::after {
+  content: 'One significant advantage of Artificial Intelligence is that it is free of bias, resulting in more accurate decision-making.';
+}
+
+.others-advantage-card-wrapper:nth-child(7) .others-advantage-card > p::after {
+  content: 'We may also utilize AI-based approaches to predict today\'s weather and the days ahead, as well as discover the best routes to our destination.';
+}
+
+.others-advantage-card-wrapper:nth-child(8) .others-advantage-card > p::after {
+  content: 'AI is the driving force behind various developments that will help humans solve the majority of difficult problems.';
+}
+
+.others-advantage-card-wrapper:nth-child(9) .others-advantage-card > p::after {
+  content: 'It can be used efficiently in any natural or man-made disaster, such as travelling to Mars, defusing a bomb, exploring the deepest sections of the oceans, or mining for coal and oil.';
 }
 
 .footer {
@@ -2686,6 +2755,22 @@ section {
   .others-title > h2 {
     font-size: 40px;
   }
+
+  .others-advantage-card-wrapper:nth-child(1) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(2) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(5) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(6) .others-advantage-card > p::after {
+    margin-left: 20%;
+  }
+}
+
+@media (max-width: 896px) {
+  .others-advantage-card-wrapper:nth-child(1) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(2) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(5) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(6) .others-advantage-card > p::after {
+    margin-left: 12%;
+  }
 }
 
 @media (max-width: 864px) {
@@ -2706,6 +2791,22 @@ section {
 
   .others-title > h2 {
     font-size: 36px;
+  }
+
+  .others-advantage-card-wrapper:nth-child(1) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(2) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(5) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(6) .others-advantage-card > p::after {
+    margin-left: 8%;
+  }
+}
+
+@media (max-width: 816px) {
+  .others-advantage-card-wrapper:nth-child(1) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(2) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(5) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(6) .others-advantage-card > p::after {
+    margin-left: 0;
   }
 }
 
@@ -2871,7 +2972,14 @@ section {
   .industry-circle-wrapper:nth-child(1)>.industry-circle > h2 {
     font-size: 18px;
   }
+
+  .others-advantage-card > p::after {
+    font-size: 18px;
+    padding-block: 6px;
+    padding-inline: 12px;
+  }
 }
+
 @media (max-width: 576px) {
   .industry-title > h2 {
     font-size: 18px;
@@ -2896,6 +3004,11 @@ section {
 
   .others-advantage-card > p {
     font-size: 24px;
+  }
+
+  .others-advantage-card > p::after {
+    font-size: 16px;
+    padding-inline: 10px;
   }
 
   .footer-links {
@@ -2956,6 +3069,13 @@ section {
 
   .others-advantage-card > p {
     font-size: 16px;
+  }
+
+  .others-advantage-card > p::after {
+    font-size: 14px;
+    padding-block: 4px;
+    padding-inline: 8px;
+    translate: 0 calc(100% + 4px);
   }
 }
 
@@ -3070,6 +3190,10 @@ section {
 
   .others-advantage-card > p {
     padding-block: 8px;
+  }
+
+  .others-advantage-card > p::after {
+    font-size: 12px;
   }
 
   .others-advantage-img-ctn {
@@ -3188,6 +3312,14 @@ section {
     margin-bottom: auto;
     text-align: center;
   }
+
+  .others-advantage-card > p:hover {
+    margin-bottom: 64px;
+  }
+
+  .others-advantage-card-wrapper:nth-child(9) .others-advantage-card > p:hover {
+    margin-bottom: 0;
+  }
 }
 
 @media (min-width: 977px) {
@@ -3201,6 +3333,13 @@ section {
     grid-template-areas:
         "i"
         "c";
+  }
+
+  .others-advantage-card-wrapper:nth-child(1) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(2) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(5) .others-advantage-card > p::after,
+  .others-advantage-card-wrapper:nth-child(6) .others-advantage-card > p::after {
+    margin-left: 30%;
   }
 }
 
